<resources>
    <string name="app_name">ICaSy</string>
    <string name="learn_all">learn all</string>
    <string name="FrageText">Question:</string>
    <string name="AntwortText">Answer:</string>
    <string name="zeigeDieAntwortButton">Show answer!</string>
    <string name="AntwortEditText">AnswerEditText</string>
    <string name="RatingButton1">X</string>
    <string name="RatingButton2">✓</string>
    <string name="num_cards">Cards: %1$d</string>
    <string name="learn_selected">learn selected</string>
    <string name="deck_name">Deck Name</string>
    <string name="delete_action">delete</string>
    <string name="selection_title">%1$d selected</string>
    <string name="action_edit">edit</string>
    <string name="save">save</string>
    <string name="title_answer">Answer</string>
    <string name="title_question">Question</string>
    <string name="change_mode">change mode</string>
    <string name="share">share</string>
    <string name="import_deck">import deck</string>
    <string name="title_answer_correct">Correct Answer</string>
    <string name="title_answer_wrong">Wrong Answer</string>
    <string name="type_button1">default</string>
    <string name="type_button2">vocabulary</string>
    <string name="type_button3">multiple choice</string>
    <string name="cardtype">n.a.</string>
    <string name="title_yourAnswer">Your Answer:</string>
    <string name="title_correctAnswer">Correct Answer:</string>
    <string name="nextButton">Next</string>
    <string name="export">export</string>
    <string name="title_activity_import">ImportActivity</string>
    <string name="import_deck_label">import Deck:</string>
    <string name="selected_topic_label">add to topic:</string>
</resources>
