<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_edit"
        android:title="@string/action_edit"
        android:icon="@drawable/ic_edit"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_share"
        android:title="@string/share"
        android:icon="@drawable/ic_upload"
        app:showAsAction="always" />

    <item android:id="@+id/action_export"
        android:title="@string/export"
        android:icon="@drawable/ic_share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/delete_action"
        android:icon="@drawable/ic_delete"
        app:showAsAction="ifRoom" />

</menu>