<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar_default"
            app:layout_scrollFlags="scroll|enterAlways" />

        <TextView
            android:id="@+id/FrageText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/FrageText"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/FrageStellen"
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:hint="@string/FrageText"
            android:inputType="text" />

        <TextView
            android:id="@+id/AntworText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/AntwortText"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/AntwortEdit"
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:hint="@string/AntwortEditText"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bewertenButton1"
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:layout_height="80dp"
                android:background="@drawable/pfeil_button1"
                android:clickable="true"
                android:text="@string/RatingButton1"
                android:textSize="30dp" />

            <Button
                android:id="@+id/zeigAnwortButton"
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:layout_height="93dp"
                android:text="@string/zeigeDieAntwortButton"
                android:textSize="25dp"
                android:clickable="true"/>

            <ImageView
                android:id="@+id/smiley"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="93dp"
                android:src="@drawable/smiley"/>

            <Button
                android:id="@+id/bewertenButton2"
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:layout_height="80dp"
                android:background="@drawable/pfeil_button2"
                android:clickable="true"
                android:text="@string/RatingButton2"
                android:textSize="30sp" />


        </LinearLayout>


    </LinearLayout>


</ScrollView>